# tef

./: Cargo.toml
lax-derive/: Cargo.toml
lax-derive/src/: lib.rs
src/: extractors.rs  lib.rs  main.rs  mod.rs
src/dc/: mod.rs
src/dcterms/: mod.rs
src/gestion/: mod.rs  star.rs  step.rs
src/mads/: mod.rs
src/mets/: mod.rs
src/metsRights/: mod.rs
src/mets_rights/: mod.rs
src/tef/: mod.rs
